# seamui

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: cache.rs  main.rs  model.rs  models.rs  server.rs  util.rs
src/app/: anchor_input.rs  anchor_item.rs  cfg_panel.rs  mod.rs  model.rs  pages.rs  server.rs  uitl.rs
src/config/: mod.rs
ui/: appwindow.slint  follow.slint  gmodel.slint  home.slint  live_card.slint  search.slint
