[package]
name = "seamui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
directories-next = "2.0.0"
env_logger = "0.10.0"
iced = { version = "0.9.0", features = ["default_system_font", "tokio", "debug"] }
iced_graphics = "0.8.0"
iced_lazy = "0.6.1"
iced_native = "0.10.1"
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strfmt = "0.2.4"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["fs", "sync", "process"] }
