[package]
name = "seamui"
version = "0.1.0"
authors = ["kirito <yesiare.cn@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.0" }
load_image = "3"
seam_core = { git = "https://github.com/Borber/seam", rev = "881ec7dafb0f5b8ce146294925d3050687f3fc17" }
anyhow = "1.0.70"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10.0"
slint = "1.2"
directories-next = "2"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
futures = "0.3"
reqwest = "0.11"
md5 = "0.7"

[build-dependencies]
slint-build = "1.2"
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
[package.metadata.winresource]
OriginalFilename = "seamui.exe"
LegalCopyright = "Copyright © 2021-2023 seamui"
